@@ -183,6 +183,8 @@ void avcodec_register_all(void)
     REGISTER_ENCDEC  (MSVIDEO1, msvideo1);
     REGISTER_DECODER (MSZH, mszh);
     REGISTER_DECODER (MTS2, mts2);
+    REGISTER_DECODER (MVC1, mvc1);
+    REGISTER_DECODER (MVC2, mvc2);
     REGISTER_DECODER (MXPEG, mxpeg);
     REGISTER_DECODER (NUV, nuv);
     REGISTER_DECODER (PAF_VIDEO, paf_video);
